envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: customize-503-response
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: 'envoy.filters.network.http_connection_manager'
      patch:
        operation: MERGE
        value:
          typed_config:
            '@type': 'type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager'
            local_reply_config:
              mappers:
                - filter:
                    status_code_filter:
                      comparison:
                        op: EQ
                        value:
                          default_value: 503
                          runtime_key: placeholder
                  status_code: 503
                  body:
                    inline_string: 'Maintenance in progress. Please wait or contact the website administrator'
                  body_format_override:
                    text_format: |-
                      <!DOCTYPE html>
                      <html>
                      <body>
                      <h1>%LOCAL_REPLY_BODY%</h1>
                      </body>
                      </html>
                    content_type: 'text/html; charset=UTF-8'
